feat: Add access control contract

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -4,6 +4,10 @@ authors = []
 description = ""
 telemetry = false
 requirements = []
+[contracts.access-control]
+path = "contracts/access-control.clar"
+depends_on = []
+
 [contracts.health-data]
 path = "contracts/health-data.clar"
 depends_on = []
